--- a/blogpost.html
+++ b/blogpost.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>El titulo del post</title>
-    <<link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="Estilos/estilos.css" />
   </head>
   <body>
-    <h1>Este es el cuerpo</h1>
-    <p>Este es el resto de contenido</p>
+    <div id="container">
+      <div id="post">
+        <h1>Este es el titulo atractivo e interesante del post</h1>
+        <p>Este es el parrafo de inicio donde vamos a explicar las cosas que se hacen con git y las ramas</p>
+      </div>
+    </div>
   </body>
 </html>
