--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <div id="container">
+      <div id="cabecera">
+        Cabecera
+      </div>
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>Este es el parrafo de inicio donde vamos a explicar las cosas que se hacen con git y las ramas</p>
