--- a/blogpost.html
+++ b/blogpost.html
@@ -8,12 +8,13 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        Hiperblog <span id="tagline">Tu blog de confianza</span>
+        Hiperblog <span id="tagline">Tu blog maestro</span>
       </div>
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>Este es el parrafo de inicio donde vamos a explicar las cosas que se hacen con git y las ramas</p>
         <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... Por ahora. </p>
+        <p>Suscribase y darle like</p>
       </div>
     </div>
   </body>
