Cambio de tituol de blog
Prueba de commit  y cambio desde github

--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>El titulo del post</title>
+    <title>Prueba de blog para git</title>
     <link rel="stylesheet" href="Estilos/estilos.css" />
   </head>
   <body>
