--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,9 @@
         <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... Por ahora. </p>
         <p>Suscribase y darle like</p>
       </div>
+      <div id="footer">
+        Hecho por Julián Cubillos &lt;3
+      </div>
     </div>
   </body>
 </html>
