--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Prueba de blog para git Version 2</title>
+    <title>Prueba de blog para git</title>
     <link rel="stylesheet" href="Estilos/estilos.css" />
   </head>
   <body>
@@ -13,7 +13,7 @@
       </div>
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
-        <p>Este es el parrafo de inicio donde vamos a explicar las cosas que se hacen con git y las ramas</p>
+        <p>Este es el párrafo de inicio donde vamos a explicar las cosas que se hacen con git y las ramas</p>
         <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... Por ahora. </p>
         <p>Suscribase y darle like</p>
       </div>
