--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>Este es el párrafo de inicio donde vamos a explicar las cosas que se hacen con git y las ramas</p>
         <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... Por ahora. </p>
+        <p><img src="imagenes/gundam.jpg" /></p>
         <p>Suscribase y darle like</p>
       </div>
       <div id="footer">
